--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001731",
     "lucide-react": "^0.487.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
